# memories-project

./: LICENSE
memories-remix/: bun.lockb  package.json
memories-remix/app/: root.tsx
memories-remix/app/components/: navbar.tsx
memories-remix/app/hooks/: use-form-submission.ts
memories-remix/app/routes/_app._index/: route.tsx
memories-remix/app/routes/_app._index/components/: form-post.tsx  post.tsx  posts.tsx
memories-remix/app/services/: post.ts
memories-rust/: .env.example  Cargo.toml  README.md  diesel.toml  docker-compose.yml
memories-rust/migrations/2024-11-30-013918_create_posts/: up.sql
memories-rust/src/: main.rs  schema.rs
memories-rust/src/application/: mod.rs
memories-rust/src/application/dto/: new_post.rs
memories-rust/src/application/use_cases/: create_post.rs  delete_post.rs  get_all_posts.rs  get_post.rs  get_posts.rs  like_post.rs  mod.rs  update_post.rs
memories-rust/src/domain/: mod.rs
memories-rust/src/domain/entities/: post.rs
memories-rust/src/domain/repositories/: post_repository.rs
memories-rust/src/domain/services/: post_service.rs
memories-rust/src/infrastructure/: mod.rs  web.rs
memories-rust/src/infrastructure/db/: connection.rs  connection_test.rs  mod.rs
memories-rust/src/infrastructure/repositories/: mod.rs  postgres_post_repository.rs
memories-rust/src/presentation/handlers/: post_handlers.rs
memories-rust/src/presentation/routes/: mod.rs  post_routes.rs
